# jarvis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml
demon-intelligence/: __main__.py
jarvis/: __jarvis__.py
